export const snapshot = {};

snapshot[`Sitemap plugin 1`] = `8`;

snapshot[`Sitemap plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`Sitemap plugin 3`] = `
[
]
`;

snapshot[`Sitemap plugin 4`] = `
{
  content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
  data: {
    children: false,
    content: "User-agent: *
Allow: /

Sitemap: https://example.com/sitemap.xml",
    page: undefined,
    url: "/robots.txt",
  },
  dest: {
    ext: ".txt",
    path: "/robots",
  },
  src: {
    asset: true,
    path: "",
    remote: undefined,
    slug: "robots",
  },
}
`;

snapshot[`Sitemap plugin 5`] = `
{
  content: '<?xml version="1.0" encoding="utf-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2020-06-21T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page4/</loc>
    <lastmod>2021-01-02T18:32:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/subpage/page7/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
</urlset>',
  data: {
    children: false,
    content: '<?xml version="1.0" encoding="utf-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/overrided-page2/</loc>
    <lastmod>2020-06-21T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page4/</loc>
    <lastmod>2021-01-02T18:32:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/page6/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
  <url>
    <loc>https://example.com/pages/subpage/page7/</loc>
    <lastmod>2022-01-01T00:00:00.000Z</lastmod>
  </url>
</urlset>',
    page: undefined,
    url: "/sitemap.xml",
  },
  dest: {
    ext: ".xml",
    path: "/sitemap",
  },
  src: {
    asset: true,
    path: "",
    remote: undefined,
    slug: "sitemap",
  },
}
`;

snapshot[`Sitemap plugin 6`] = `
{
  content: "<!DOCTYPE html>
Content of Page 5",
  data: {
    children: true,
    content: "Content of Page 5",
    date: 1970-01-01T00:00:00.000Z,
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
    ],
    title: "Page 5",
    url: "/page5/",
  },
  dest: {
    ext: ".html",
    path: "/page5/index",
  },
  src: {
    asset: undefined,
    ext: ".yaml",
    path: "/page5",
    remote: undefined,
    slug: "page5",
  },
}
`;

snapshot[`Sitemap plugin 7`] = `
{
  content: "<!DOCTYPE html>
Content of Page 2",
  data: {
    children: true,
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 2",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "sub-pages",
    ],
    title: "Page 2",
    url: "/overrided-page2/",
  },
  dest: {
    ext: ".html",
    path: "/overrided-page2/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.json",
    path: "/pages/2020-06-21_page2",
    remote: undefined,
    slug: "page2",
  },
}
`;

snapshot[`Sitemap plugin 8`] = `
{
  content: "<!DOCTYPE html>
Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.tmpl.ts",
  data: {
    children: true,
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Overrided site name",
    tags: [
      "sub-pages",
    ],
    title: "Page 4",
    url: "/pages/page4/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page4/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages/2021-01-02-18-32_page4",
    remote: undefined,
    slug: "page4",
  },
}
`;

snapshot[`Sitemap plugin 9`] = `
{
  content: "<!DOCTYPE html>
<p>Content of Page 6</p>
",
  data: {
    children: true,
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 6
",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "sub-pages",
      "page6",
    ],
    title: "Page 6",
    url: "/pages/page6/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page6/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/pages/2021-12-29-page6",
    remote: undefined,
    slug: "page6",
  },
}
`;

snapshot[`Sitemap plugin 10`] = `
{
  content: "Content of Page 3",
  data: {
    children: true,
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 3",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "sub-pages",
    ],
    title: "Page 3",
    url: "/page_3",
  },
  dest: {
    ext: "",
    path: "/page_3",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/pages/page3",
    remote: undefined,
    slug: "page3",
  },
}
`;

snapshot[`Sitemap plugin 11`] = `
{
  content: "<!DOCTYPE html>
Content of Page 7",
  data: {
    children: true,
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 7",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "sub-pages",
      "sub-sub-pages",
      "page7",
    ],
    url: "/pages/subpage/page7/",
  },
  dest: {
    ext: ".html",
    path: "/pages/subpage/page7/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/pages/subpage/page7",
    remote: undefined,
    slug: "page7",
  },
}
`;
